Get balance endpoints implementation and tests