@@ -11,28 +11,34 @@ import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
+import java.util.stream.Collectors;
 
 
 @Service
 @AllArgsConstructor
 @Slf4j
 public class ArtistManagementServiceImpl implements ArtistManagementService {
+
     private final EventInvitationOrchestrator invitationOrchestrator;
 
     @Override
     public void respondToInvitations(List<InvitationArtistConfirmationRequest> requests, Long artistId) {
         try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-            List<? extends Future<?>> futures = requests.stream()
+            List<Future<?>> futures = requests.stream()
                     .map(request -> executor.submit(() -> invitationOrchestrator.processInvitationResponse(request, artistId)))
-                    .toList();
+                    .collect(Collectors.toList());
 
-            for (Future<?> future : futures) {
+            futures.forEach(future -> {
                 try {
                     future.get();
+                } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
+                    log.error("Invitation processing interrupted", e);
                 } catch (Exception e) {
-                    log.error("Error processing invitation: {}", e.getMessage());
+                    log.error("Error processing invitation: {}", e.getMessage(), e);
                 }
-            }
+            });
         }
     }
 }
+
